Version 12

--Enemy base bullet speed now gradually increases, between levels 20 and 80, 
  up to being equal to player's bullet speed (before, enemy bullet speed was 
  always half player bullet speed).




Version 11   2011-February-16

--Powers are sorted with strongest to the right whenever they are passed 
  upwards to encourage additional pick-ups (which will replace weakest powers 
  on left).

--Fixed delay and excess cpu/memory usage when entering high-level power-up 
  tokens (thanks Jimmy Andrews).

--Changed to only decay the weakest two powers in the set (encourages picking 
  up new powers to protect a big power that you have built up).

--Changed to only replace weakest power (or any empty slots) with hearts on 
  knock-down, to make knock-down even less brutal and frustrating.  Also sort 
  powers strongest-right on knock-down to encourage pickups before rising.

--Knock-down hearts that are added depend on difficulty of level you are being 
  knocked down into (more help when knocked down into a harder level).

--Fixed drawing glitch in power-set majority shading when a new token is pushed
  in.

--Fixed potential level-0 difficulty-free power-up-building exploit.

--Changed so that hearts are knocked off higher self when hit to thwart the 
  heart rush exploit.

--Changed to never decay hearts.

--Next-higher-self's hearts are always trimmed to match lower self's hearts to
  thwart heart-bootstrapping exploit.

--Changed behavior of Burst power so that it does not act effectively as a 
  range boost, and increased its basic explosion pattern on L1 to compensate.

--Eliminated bounce distance boost for bullets that already have extended 
  range to deal with the overpowered beekeeper combo (thanks Jimmy Andrews).

--Changed to decay high-level powers more dramatically than weaker powers.

--Fixed heatSeek + bounce combo that was tunneling through walls.

--Version number is now included in recorded game files.
